--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -16,6 +16,7 @@
                   <items>
                     <MenuItem fx:id="menuItemSeller" mnemonicParsing="false" onAction="#onMenuItemSellerAction" text="Vendedor" />
                         <MenuItem fx:id="menuItemDepartment" mnemonicParsing="false" onAction="#onMenuItemDepartmentAction" text="Departamento" />
+                        <MenuItem fx:id="menuItemEmployee" mnemonicParsing="false" onAction="#onMenuItemEmployeeAction" text="Trabalhador" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
