--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -11,7 +11,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
-      <Label text="Seller Registration">
+      <Label text="Cadastro de vendedor">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
