--- a/src/gui/MainView.fxml
+++ b/src/gui/MainView.fxml
@@ -17,6 +17,7 @@
                     <MenuItem fx:id="menuItemSeller" mnemonicParsing="false" onAction="#onMenuItemSellerAction" text="Vendedor" />
                         <MenuItem fx:id="menuItemDepartment" mnemonicParsing="false" onAction="#onMenuItemDepartmentAction" text="Departamento" />
                         <MenuItem fx:id="menuItemPerson" mnemonicParsing="false" onAction="#onMenuItemPersonAction" text="Pessoa" />
+                        <MenuItem fx:id="menuItemStore" mnemonicParsing="false" onAction="#onMenuItemStoreAction" text="Loja" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Help">
