--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="347.0" prefWidth="594.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormController">
+<AnchorPane prefHeight="333.0" prefWidth="594.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormController">
    <children>
-      <GridPane layoutX="27.0" layoutY="18.0" prefHeight="311.0" prefWidth="541.0" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="18.0">
+      <GridPane layoutX="27.0" layoutY="18.0" prefHeight="293.0" prefWidth="542.0" AnchorPane.leftAnchor="27.0" AnchorPane.topAnchor="18.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="87.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.0" minWidth="10.0" prefWidth="265.0" />
@@ -27,27 +27,30 @@
             <RowConstraints maxHeight="97.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="104.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="120.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="120.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="id" />
-            <Label prefHeight="51.0" prefWidth="33.0" text="Nome" GridPane.rowIndex="1" />
             <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <ComboBox fx:id="comboBoxDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label fx:id="labelErrorName" textFill="#fc0000" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <HBox prefHeight="42.0" prefWidth="257.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <ComboBox fx:id="comboBoxStore" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <HBox prefHeight="48.0" prefWidth="266.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
                   <Button fx:id="btSave" lineSpacing="20.0" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" />
                   <Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancelar" />
                </children>
             </HBox>
+            <Label prefHeight="51.0" prefWidth="33.0" text="Nome" GridPane.rowIndex="1" />
             <Label text="Email" GridPane.rowIndex="2" />
             <Label text="Nascimento" GridPane.rowIndex="3" />
             <Label text="Salário Base" GridPane.rowIndex="4" />
             <Label text="Departamento" GridPane.rowIndex="5" />
+            <Label text="Loja" GridPane.rowIndex="6" />
+            <Label fx:id="labelErrorName" textFill="#fc0000" GridPane.columnIndex="2" GridPane.rowIndex="1" />
             <Label fx:id="labelErrorEmail" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Label fx:id="labelErrorBirthDate" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Label fx:id="labelErrorBaseSalary" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4" />
